--- a/learning_logs/templates/learning_logs/shadow/shadow_by_title.html
+++ b/learning_logs/templates/learning_logs/shadow/shadow_by_title.html
@@ -24,5 +24,9 @@
     </ul>
     {% endfor %}
 
+  <a href="{% url 'learning_logs:shadow_by_date' %}" class="card-link">Back to Shadow list</a>
+  <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
 {% endblock content %}
   </ul>
