--- a/between_app/templates/between_app/personal_style/results_email.html
+++ b/between_app/templates/between_app/personal_style/results_email.html
@@ -21,7 +21,7 @@
     <div class="card bg-active mb-3">
     <div class="card-body">
     <h2 class="card-title">{{position.group|title}}</h2>
-    <image src="{% static position.image_path %}" class='card-img-right posImage'>
+    <image src="{% static position.image %}" class='card-img-right posImage'>
     <p class="card-text posText"><b>Description</b>:{{position.description}}</p>
     <p class="card-text posText"><b>Shadow</b>:{{position.shadow}}</p>
     <p class="card-text posText"><b>Traditions</b>:{{position.traditions}}</p>
@@ -31,7 +31,7 @@
     <div class="card bg-active mb-3">
     <div class="card-body">
     <h2 class="card-title">{{path.group|title}}</h2>
-    <image src="{% static path.image_path %}" class='card-img-right posImage'>
+    <image src="{% static path.image %}" class='card-img-right posImage'>
     <p class="card-text posText"><b>Description</b>:{{path.description}}</p>
     <p class="card-text posText"><b>Shadow</b>:{{path.shadow}}</p>
     <p class="card-text posText"><b>Traditions</b>:{{path.traditions}}</p>
@@ -41,7 +41,7 @@
     <div class="card bg-active mb-3">
     <div class="card-body">
     <h2 class="card-title">{{tradition.group|title}}</h2>
-    <image src="{% static tradition.image_path %}" class='card-img-right posImage'>
+    <image src="{% static tradition.image %}" class='card-img-right posImage'>
     <p class="card-text posText"><b>Description</b>:{{tradition.description}}</p>
     <p class="card-text posText"><b>Shadow</b>:{{tradition.shadow}}</p>
     <p class="card-text posText"><b>Traditions</b>:{{tradition.traditions}}</p>
@@ -50,12 +50,14 @@
    
 </div>
 </div>
+<a class="badge bg-primary p-2 m-2" href={% url 'between_app:style_detail' pk %}>See your scores</a></br>
+
 
 <form action="{% url 'between_app:results' pk %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Send as Email' %}
   </form>
-
+</br>
 
 {% endblock content%}
