--- a/learning_logs/templates/learning_logs/creating/create_reflection.html
+++ b/learning_logs/templates/learning_logs/creating/create_reflection.html
@@ -12,5 +12,10 @@
     {% bootstrap_button button_type='submit' content='New Creation' %}
   </form>
 
+
+<a href="{% url 'learning_logs:creation_by_date' %}" class="card-link">Back to Creations list</a>
+<a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
   {% endblock content %}
 
