--- a/learning_logs/templates/learning_logs/creating/edit_creation.html
+++ b/learning_logs/templates/learning_logs/creating/edit_creation.html
@@ -1,15 +1,20 @@
 {% extends 'between_app/_base.html' %}
 {% block content %}
 {% load django_bootstrap5 %}
-<p><a href="{% url 'learning_logs:index' question.id %}">{{topic}}</a></p>
+<p><a href="{% url 'learning_logs:index'%}">{{topic}}</a></p>
 
 <p>Edit Entry</p>
 
-<form action="{%url 'learning_logs:new_question' entry.id %}" method='post'>
+<form action="{%url 'learning_logs:edit_creation' creations.pk %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Update Answer' %}
 </form>
+
+<a href="{% url 'learning_logs:creation_by_date' %}" class="card-link">Back to Creations list</a>
+<a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
 
 
 {%endblock content%}
