--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,9 +1,9 @@
 {% extends 'between_app/_base.html' %}
 {% block content%}
 <p>
-    <a href= "{%url 'learning_logs:topic' topic.id%}">{{topic}}</a></p>
+    <a href= "{%url 'learning_logs:topic' topic.pk%}">{{topic}}</a></p>
 <p>Add new entry</p>
-<form action="{%url 'learning_logs:new_entry' topic.id%}" method='post'>
+<form action="{%url 'learning_logs:new_entry' topic.pk%}" method='post'>
     {%csrf_token%}
     {{form.as_div}}
     <button name='submit'>Add entry</button>
