--- a/learning_logs/templates/learning_logs/question/create_Question.html
+++ b/learning_logs/templates/learning_logs/question/create_Question.html
@@ -23,6 +23,10 @@
     {% bootstrap_button button_type='submit' content='Create Topic' %}
   </form>
 
+  <a href="{% url 'learning_logs:answer_by_date' %}" class="card-link">Back to Questions list</a>
+  <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
 
 
 
