--- a/learning_logs/templates/learning_logs/question/question_item.html
+++ b/learning_logs/templates/learning_logs/question/question_item.html
@@ -9,12 +9,16 @@
       <h5 class="card-title">{{question.question}}</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">My question: {{question.date_added|date}}</h6>
       <Goal class="card-text">My answer: {{question.text}} </P>
-      <a href="{% url 'learning_log:question_by_date' %}" class="card-link">Back to question</a>
-      <a href="{% url 'learning_log:index' %}" class="card-link">Back to Journaling home</a>
+      <a href="{% url 'learning_logs:edit_question' question.pk %}" class="card-link">Edit</a></br>
+      <a href="{% url 'learning_logs:after_answer_date' %}" class="card-link">Back to question</a>
+      <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
     </div>
   </div>
 
+  <a href="{% url 'learning_logs:answer_by_date' %}" class="card-link">Back to Questions list</a>
+  <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
 
+</br></br>
 
 
 {%endblock content%}
