--- a/learning_logs/templates/learning_logs/shadow/edit_shadow.html
+++ b/learning_logs/templates/learning_logs/shadow/edit_shadow.html
@@ -1,15 +1,21 @@
 {% extends 'between_app/_base.html' %}
 {% block content %}
 {% load django_bootstrap5 %}
-<p><a href="{% url 'learning_logs:index' question.id %}">{{topic}}</a></p>
+<p><a href="{% url 'learning_logs:index' %}">{{topic}}</a></p>
 
 <p>Edit Entry</p>
 
-<form action="{%url 'learning_logs:new_question' entry.id %}" method='post'>
+<form action="{%url 'learning_logs:edit_shadow' shadow.pk %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Update Answer' %}
 </form>
+</br>
+
+<a href="{% url 'learning_logs:after_answer_date' %}" class="card-link">Back to Shadow list</a></br>
+<a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+</br>
+</br>
 
 
 {%endblock content%}
