--- a/learning_logs/templates/learning_logs/shadow/shadow_by_date.html
+++ b/learning_logs/templates/learning_logs/shadow/shadow_by_date.html
@@ -13,10 +13,10 @@
   {% for answer in answers%}
     <li>
       <p>{{answer.date_added|date:'M d,Y H:i'}} </p>
-      <p>{{answer.question}} </p>
+      <p>{{answer.title}} </p>
       <p>{{answer.text|linebreaks}}</p>
-      <p><a href="{%url 'learning_logs:edit_question' answer.id %}">
-        Edit entry</a></p>
+      <p><a href="{%url 'learning_logs:shadow_item' answer.pk %}">
+        See Entry</a></p>
     </li>
 
     {% empty %}
@@ -24,6 +24,8 @@
   </ul>
   {% endfor %}
 
+  <a href="{% url 'learning_logs:shadow_by_date' %}" class="card-link">Back to Shadow list</a>
+  <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
 
 
 
