--- a/learning_logs/templates/learning_logs/topic/edit_entry.html
+++ b/learning_logs/templates/learning_logs/topic/edit_entry.html
@@ -1,15 +1,19 @@
 {% extends 'between_app/_base.html' %}
 {% block content %}
 {% load django_bootstrap5 %}
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></p>
+<p><a href="{% url 'learning_logs:topic' topic.pk %}">{{topic}}</a></p>
 
 <p>Edit Entry</p>
 
-<form action="{%url 'learning_logs:edit_entry' entry.id %}" method='post'>
+<form action="{%url 'learning_logs:edit_entry' entry.pk %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Update Entry' %}
 </form>
 
+<a href="{% url 'learning_logs:topics' %}" class="card-link">Back to Topic list</a>
+<a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
 
 {%endblock content%}
