--- a/learning_logs/templates/learning_logs/topic/new_entry.html
+++ b/learning_logs/templates/learning_logs/topic/new_entry.html
@@ -2,14 +2,18 @@
 {% block content%}
 {% load django_bootstrap5 %}
 <p>
-    <a href= "{%url 'learning_logs:topic' topic.id%}">{{topic}}</a></p>
+    <a href= "{%url 'learning_logs:topic' topic.pk%}">{{topic}}</a></p>
 <p>Add new entry</p>
-<form action="{%url 'learning_logs:new_entry' topic.id%}" method='post'>
+<form action="{%url 'learning_logs:new_entry' topic.pk %}" method='post'>
     {%csrf_token%}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='New Entry' %}
 </form>
 
+<a href="{% url 'learning_logs:topics' %}" class="card-link">Back to Topic list</a>
+<a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
 {%endblock content%}
 
 
