--- a/learning_logs/templates/learning_logs/topic/new_topic.html
+++ b/learning_logs/templates/learning_logs/topic/new_topic.html
@@ -10,6 +10,10 @@
     {% bootstrap_button button_type='submit' content='New Topic' %}
   </form>
 
+  <a href="{% url 'learning_logs:topics' %}" class="card-link">Back to Topic list</a>
+<a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+
+</br></br>
 {% endblock content %}
 
 
