--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -1,6 +1,6 @@
 {% extends 'between_app/_base.html' %}
 {% load static %}
-{%block title%}PsyProfile{%endblock title%}
+{%block title%}CreaTherapy{%endblock title%}
 {% load django_bootstrap5%}
 
 {%block page_header%}CreaTherapy:{%endblock page_header%}
