--- a/between_app/templates/between_app/test-home.html
+++ b/between_app/templates/between_app/test-home.html
@@ -1,5 +1,5 @@
 {% extends 'between_app/_base.html' %}
-{%block title%}CreaT:Test Home {%endblock title %}
+{%block title%}CreaTest Home{%endblock title %}
 
 {% block content %}
 {% load static %}
