--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -10,7 +10,7 @@
     {% bootstrap_javascript %}
 </head>
 
-<body class='container-fluid bg-light'>
+<body class='container bg-light'>
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark">
     <div class='container-fluid'>
         <a class='navbar-brand' href="{% url 'between_app:index' %}">
@@ -35,7 +35,6 @@
                     <a class='nav-link' href="{% url 'pages:index' %}">
                         Theory</a></li>
             </ul><!-- End of links on left side of nvbar -->
-          </div> <!-- Closes collapsible parts of navbar -->
             <!-- Account related links-->
             <ul class='navbar-nav ms-auto mb-2 mb-md-0'>
                 {% if user.is_authenticated %}
@@ -49,8 +48,7 @@
                 {% endif %}
             </ul> 
                <!-- End of account related links -->
-
-        
+         </div> <!-- Closes collapsible parts of navbar -->
     </div><!-- closes navbar container-->
 </nav><!-- end of navbar -->
 
