error in device width

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta charset='utf-8'>
-    <meta name='viewport' content='with=device-with,inicial-scale=1'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{%block title%}CreaTherapy{%endblock title%}</title>
 
     {% load django_bootstrap5 %}
