--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -10,7 +10,7 @@
     {% bootstrap_javascript %}
 </head>
 
-<body class='container bg-light'>
+<body class='bg-light'>
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark">
     <div class='container-fluid'>
         <a class='navbar-brand' href="{% url 'between_app:index' %}">
