adjusted theory view in small screen

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -14,8 +14,8 @@
 
 <!-- side table of contents -->
 <div class="row">
-    <div class="col-2">
-<nav id="navbar-example3" class="navbar navbar-light bg-light flex-column align-items-stretch p-3 position-fixed">
+  <div class='col-1 position-fixed'>
+<nav id="navbar-example3" class="navbar navbar-light bg-light flex-column align-items-stretch pb-4 mb-3 position-left">
     <a class="navbar-brand" href="#">Content</a>
     <nav class="nav nav-pills flex-column">
       <a class="nav-link" href="#item-1">Introduction</a>
@@ -33,7 +33,7 @@
   </nav>
 </div>
  <!-- Content from here -->   
- <div class="col-8">
+ <div class="col-8 container">
 
   <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
 
