--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -8,12 +8,13 @@
     {% load django_bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    {% load static %}
 </head>
 
 <body class='bg-light'>
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark">
     <div class='container-fluid'>
-        <a class='navbar-brand' href="{% url 'between_app:index' %}">
+        <a class='navbar-brand' href="{% url 'between_app:index' %}"><image class='img rounded-5' style='max-width:1.6em;' src={% static 'logo2.png'%}>
             CreaTherapy</a>
 
         <button class='navbar-toggler' type='button' data-bs-toggle='collapse'
