fixed lateral menu pages

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -33,7 +33,7 @@
   </nav>
 </div>
  <!-- Content from here -->   
- <div class="col-8 container">
+ <div class="col-8 container ps-5">
 
   <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
 
